{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 11,
  "lineage": "9fa8a721-8b92-501f-20e4-c9f7fad61282",
  "resources": [
    {
      "module": "module.network_data",
      "mode": "data",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:security-group/sg-0e9348134218e6041",
            "description": "Main Security group for lighthouse-training",
            "filter": null,
            "id": "sg-0e9348134218e6041",
            "name": "main-sg-lighthouse-training-20230529165206113000000001",
            "tags": {
              "Name": "main-sg-lighthouse-training",
              "project": "lighthouse",
              "tier": "main"
            },
            "timeouts": null,
            "vpc_id": "vpc-088968963d206d313"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196029031078:security-group/sg-048f10a0c6f20f0bb",
            "description": "Security group for apps-db-lighthouse-training",
            "egress": [],
            "id": "sg-048f10a0c6f20f0bb",
            "ingress": [],
            "name": "apps-db-lighthouse-training-20230529165817784900000003",
            "name_prefix": "apps-db-lighthouse-training-",
            "owner_id": "196029031078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apps-db-lighthouse-training"
            },
            "tags_all": {
              "Name": "apps-db-lighthouse-training",
              "project": "lighthouse"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-088968963d206d313"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_data.data.aws_vpcs.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 5432,
            "id": "sgrule-2797808521",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-048f10a0c6f20f0bb",
            "security_group_rule_id": "sgr-010cff058528fe487",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_data.data.aws_vpcs.main",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "200.225.115.108/32"
            ],
            "description": "PostgreSQL access from my IP",
            "from_port": 5432,
            "id": "sgrule-143920020",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-048f10a0c6f20f0bb",
            "security_group_rule_id": "sgr-0baa8f1048439415c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.my_ip",
            "module.network_data.data.aws_vpcs.main",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-768798766",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-048f10a0c6f20f0bb",
            "security_group_rule_id": "sgr-06fcd4b7bc2c97682",
            "self": false,
            "source_security_group_id": "sg-0e9348134218e6041",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_data.data.aws_security_group.main",
            "module.network_data.data.aws_vpcs.main",
            "module.security_group.aws_security_group.this",
            "module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}